# WorldSimulation10028

./: .gitignore  AGENTS.MD  CMakeLists.txt  EUROPE_TECH_ADVANTAGE_AND_SIM_ROADMAP.md  FineTuning.MD  GEOGRAPHY_LAYER_INTEGRATION_NOTE.md  MECHANISM_GAP_TICKET.md  README.md  RESEARCH_5000_BCE_BASELINE.md  Roadmap.txt  TUNINGLOG.MD  build.bat  country.cpp  country.h  culture.cpp  culture.h  economy.cpp  economy.h  great_people.cpp  great_people.h  imgui.ini  log3.csv  log4.csv  main.cpp  map.cpp  map.h  mega_time_jump_population_debug.csv  news.cpp  news.h  oldlog.csv  renderer.cpp  renderer.h  setup_vs2022_profile.bat  sfmltest.sln  sfmltest.vcxproj  sfmltest.vcxproj.filters  technology.cpp  technology.h  trade.cpp  trade.h
Research/: Equations.txt  REALISM_HARD_FIRST_CHECKLIST.txt  RESEARCH_GPU_CHECKLIST.txt  Realism.md  SimulationResearch.md
data/: fine_tuning_runner.json  realism_definitions.json  sim_config.toml  sim_config_schema.json  sim_config_settlement_test.toml
include/: country.h  culture.h  domestic_packages.h  economy.h  map.h  renderer.h  resource.h  settlement_system.h  simulation_context.h  simulation_runner.h  technology.h  trade.h
sfmltest/x64/Debug/: sfmltest.exe.recipe  sfmltest.ilk  vc143.idb
sfmltest/x64/Debug/sfmltest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  sfmltest.lastbuildstate
sfmltest/x64/Release/: sfmltest.exe.recipe  sfmltest.ipdb
sfmltest/x64/Release/sfmltest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  sfmltest.lastbuildstate
src/: cli_main.cpp  country.cpp  domestic_packages.cpp  economy.cpp  great_people.cpp  main.cpp  map.cpp  renderer.cpp  resource.cpp  settlement_system.cpp  simulation_context.cpp  simulation_runner.cpp  technology.cpp  trade.cpp
tools/: baseline_score.json  evaluate_run.py  fine_tune_control_center.py  fine_tune_realism.py  seed_max_tech_finder.py  seed_max_tech_web.py  seed_max_tech_web_runtime.py  seed_tech_finder.py  state_diagnostics_runner.py
x64/Debug/: sfmltest.exe.recipe  sfmltest.ilk  vc143.idb
x64/Debug/sfmltest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  sfmltest.lastbuildstate
x64/Release/: sfmltest.exe.recipe  sfmltest.ipdb
x64/Release/sfmltest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  sfmltest.lastbuildstate
